demo/manifests/httpbin/httpbin.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httpbin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
        version: "1.2.0" # UPDATE THIS VERSION FOR NICE KIALI GRAPH
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
  strategy:
    canary:
      stableService: httpbin-stable
      canaryService: httpbin-preview
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: httpbin-waypoint-route
            namespace: httpbin
      steps:
        - setCanaryScale:
            replicas: 1
        - analysis:
            templates:
              - templateName: smoke-test-job
        - setCanaryScale:
            matchTrafficWeight: true
        - setWeight: 10
        - pause: { duration: 1m }
        - analysis:
            templates:
              - templateName: success-rate
        - setWeight: 40
        - pause: { duration: 1m}
        - analysis:
            templates:
              - templateName: success-rate
        - setWeight: 70
        - pause: { duration: 1m}
        - analysis:
            templates:
              - templateName: success-rate
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  labels:
    istio.io/ingress-use-waypoint: "true"
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-route-to-httpbin
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ingress
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-waypoint-route
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: api
      port: 80
  rules:
    - backendRefs:
        - name: httpbin-stable
          port: 80
        - name: httpbin-preview
          port: 80
---
# The api service acts as a "Gateway" for traffic coming to the HTTPBin service
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-preview
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-stable
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
